# l-bfgs-b

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  README.md
animation/: CMakeLists.txt
animation/src/: animation.cpp  animation.py
examples/: CMakeLists.txt
examples/include/: example.h
examples/src/: example_callback.cpp  example_constrained.cpp  example_unconstrained.cpp
include/: function.h  lbfgsb.h  line_search.h  solver.h  util.h
test/: CMakeLists.txt
test/include/: test.h
test/src/: test.cpp
